--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ uuid = { version = "1.2.2", features = [
   "fast-rng",          # Use a faster (but still sufficiently random) RNG
   "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ] }
+thiserror = "1.0.38"
