--- a/ordering-service/domain/core/Cargo.toml
+++ b/ordering-service/domain/core/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 common = { path = "../../../common" }
 uuid = { workspace = true }
+derive_builder = { workspace = true }
