--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ path = "./ordering-service/container/src/main.rs"
 
 [workspace]
 members = [
-  "ordering-service/domain/core",
+  "ordering-service/domain/domain_core",
   "ordering-service/domain/service",
   "ordering-service/container",
   "common",
@@ -26,5 +26,6 @@ uuid = { version = "1.2.2", features = [
 thiserror = "1.0.38"
 chrono = "0.4.23"
 derive_builder = "0.12.0"
+async-trait = "0.1.68"
 
 [dependencies]
