Adds create_order impl

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2021"
 uuid = { workspace = true }
 thiserror = { workspace = true }
 derive_builder = { workspace = true }
+async-trait = { workspace = true }
