--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ members = [
   "ordering-service/domain/domain_core",
   "ordering-service/domain/service",
   "ordering-service/container",
+  "ordering-service/data-access",
+  "infrastructure/kafka",
   "common",
 ]
 
