--- a/infrastructure/kafka/Cargo.toml
+++ b/infrastructure/kafka/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+derive_builder = { workspace = true }
+async-trait = { workspace = true }
