--- a/infrastructure/kafka/Cargo.toml
+++ b/infrastructure/kafka/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 derive_builder = { workspace = true }
 async-trait = { workspace = true }
+apache-avro = { version = "0.14.0", features = ["derive"] }
+uuid = { workspace = true }
