--- a/infrastructure/kafka/Cargo.toml
+++ b/infrastructure/kafka/Cargo.toml
@@ -10,3 +10,4 @@ derive_builder = { workspace = true }
 async-trait = { workspace = true }
 apache-avro = { version = "0.14.0", features = ["derive"] }
 uuid = { workspace = true }
+thiserror = { workspace = true }
