--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,5 +29,6 @@ thiserror = "1.0.38"
 chrono = "0.4.23"
 derive_builder = "0.12.0"
 async-trait = "0.1.68"
+serde = { version = "1.0.159", features = ["derive"] }
 
 [dependencies]
