--- a/infrastructure/kafka/Cargo.toml
+++ b/infrastructure/kafka/Cargo.toml
@@ -14,3 +14,4 @@ thiserror = { workspace = true }
 rdkafka = "0.29.0"
 schema_registry_converter = { version = "3.1.0", features = ["avro"] }
 chrono = { workspace = true }
+serde = { workspace = true }
