--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,3 +11,4 @@ uuid = { workspace = true }
 thiserror = { workspace = true }
 derive_builder = { workspace = true }
 async-trait = { workspace = true }
+chrono = { workspace = true }
