--- a/ordering-service/messaging/Cargo.toml
+++ b/ordering-service/messaging/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "domain_core"
+name = "messaging"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-common = { path = "../../../common" }
+kafka = {path = "../../infrastructure/kafka"}
+domain_core = { path = "../domain/domain_core" }
 uuid = { workspace = true }
-derive_builder = { workspace = true }
-async-trait = { workspace = true }
-chrono = { workspace = true }
